# trydjango

./: .gitignore  README.md  db.sqlite3  pyproject.toml
pages/: views.py
products/: forms.py  models.py  views.py
products/migrations/: 0001_initial.py  0002_product_featured.py  0003_alter_product_summary.py  0004_alter_product_summary.py  0005_alter_product_featured.py
products/templates/products/: product_create.html  product_detail.html
templates/: about.html  base.html  contact.html  home.html
templates/product/: details.html
trydjango/: settings.py  urls.py
