[tool.poetry]
name = "trydjango"
version = "0.1.0"
description = ""
authors = ["leblancr <rich.leblanc1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
Django = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
